--- a/Index.html
+++ b/Index.html
@@ -22,10 +22,10 @@
 
 <body>
     <!-- Nav bar -->
-    <nav class="navbar navbar-expand-lg  navbar-secondary bg-secondary py-3 fixed-top">
+    <nav class="navbar navbar-expand-lg  navbar-secondary bg-primary py-1 fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <span class="h3 fw-bold"><span class="text-dark">Atusasiire Daren Cared</span></span>
+                <img src="/images/logo.png" alt="logo" style="height:90px">
 
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -45,6 +45,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-white" href="/projects.html">Projects</a>
                     </li>
+                    <li>
+                        <a class="nav-link text-white" href="/resume.html">Resume</a>
+                    </li>
 
                     <li class="nav-item">
                         <a class="nav-link text-white" href="/contact.html">Contact</a>
@@ -59,15 +62,34 @@
     </nav>
 
     <!-- Hero section -->
-    <section class="jumbotron jumbotron-fluid text-center bg-dark text-white p-5 p-lg-0 pt-lg-5 text-sm-start vh-100">
+    <section
+        class="jumbotron jumbotron-fluid text-center bg-secondary text-white p-5 p-lg-0 pt-lg-5 text-sm-start vh-100">
         <div class="container mt-5">
             <div class="d-sm-flex align-items-center justify-content-between d-sm-flex pt-5">
                 <div>
-                    <h6 class="display-5 fw-bold">Welcome to <span class="text-warning">My Portfolio</span></h6>
-                    <p class="lead my-4 mt-5">A showcase of my work and skills.</p>
-                    <button type="button" class="btn btn-lg btn-info mt-5"enabled>Explore My Work</button>
+                    <h6 class="display-5 fw-bold">Hello, I'm Atusasiire Daren Cared </h6>
+
+                    <p class="display-6 fw-bold">
+                        <span class="text-dark">
+                            Junior Web Developer
+                        </span>
+                    </p>
+                    <p class="lead my-4 mt-5 text-white">
+                        I'm a junior web developer skilled in HTML, CSS, and Bootstrap,<br> with a passion for creating
+                        clean,
+                        responsive, and user-friendly<br> websites. I focuses on turning ideas
+                        into functional designs,
+                        applying<br> my knowledge to build modern interfaces while continuously<br>
+                        improving my web development
+                        skills.
+                    </p>
+                    <p class="text-dark fw-bold fst-italic">
+                        Ideate | Innovate | Get It Done
+
+                    </p>
+                    <button type="button" class="btn btn-lg btn-info mt-5" enabled>Explore My Work</button>
                 </div>
-                <img class="img-fluid w-50" src="/images/2955425-removebg-preview (1).png" alt="Image">
+                <img class="img-fluid w-25" src="/images/2955425-removebg-preview (1).png" alt="Image">
             </div>
         </div>
     </section>
@@ -76,48 +98,58 @@
     <!-- Services section -->
 
     <section>
-        <div class="container">
+        <div class="container pt-5">
             <div class="row text-center">
                 <div class="col-md">
-                    <div class="card w-75 bg-dark text-light mt-5">
-                        <div class="card-body text-center">
-                            <div>
-                                <img src="/images/web-design-technology-browsing-programming-concept-removebg-preview.png"
-                                    class="card-img-top bg-dark" alt="image">
-                                <div class="card-body bg-dark">
-                                    <h5 class="card-title"><span class="text-warning">Web design and Web
-                                            development</span></h5>
-                                    <p class="card-text">
-                                        I provides services such as website development, which involves building the
-                                        full functionality of a site,
-                                        and front-end development, which focuses on creating the visual and interactive
-                                        user interface.
-                                    </p>
-                                    <a href="/projects.html" class="btn btn-info">My Projects</a>
-                                </div>
+                    <div class="card-body text-center">
+                        <div class="card" style="width: 18rem;">
+                            <div class="card-body bg-dark text-light>
+                                    <h5 class=" card-title"><span class="text-primary">
+                                    Web design and Web development</span></h5>
+                                <p class="card-text text-light">
+                                    I provides services such as website development, which involves building the
+                                    full functionality of a site,
+                                    and front-end development, which focuses on creating the visual and interactive
+                                    user interface.
+                                </p>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                
+
                 <div class="col-md">
-                    <div class="card w-75 bg-dark text-light mt-5">
-                        <div class="card-body bg-dark text-center">
-                            <img src="/images/portfolio_display-removebg-preview.png" class="card-img-top" alt="image">
-                            <div class="card-body">
-                                <h5 class="card-title"><span class="text-warning">Portfolios</span></h5>
-                                <p class="card-text">
-                                    I create custom portfolio that highlight a client's  work and
+                    <div class="card-body text-center">
+                        <div class="card" style="width: 18rem;">
+                            <div class="card-body bg-dark text-light">
+                                <h5 class=" card-title"><span class="text-primary">Portfolios</span></h5>
+                                <p class="card-text text-light">
+                                    I create custom portfolio that highlight a client's work and
                                     personal brand, combining clean design, responsive layout, and seamless
                                     functionality
                                     to make a strong online impression.
                                 </p>
-                               
                             </div>
                         </div>
                     </div>
                 </div>
+
+
+                <div class="col-md">
+                    <div class="card-body text-center">
+                        <div class="card" style="width: 18rem;">
+                            <div class="card-body bg-dark text-light>
+                                <h5 class=" card-title"><span class="text-primary">Graphics Design</span></h5>
+                                <p class="card-text text-light">
+                                    I'm a passionate graphic designer and visual storyteller crafting clean,
+                                    impactful visuals, creatig innovative
+                                    design solutions transforming concepts into professional, engaging designs
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
@@ -128,7 +160,7 @@
     <section class="bg-dark text-white text-center py-4 mt-5">
         <div class="row">
             <div class="col">
-                <h5><span class="text-warning">Quick Links</span></h5>
+                <h5><span class="text-primary">Quick Links</span></h5>
                 <div>
                     <a href="/index.html">Home</a>
                 </div>
@@ -141,6 +173,10 @@
                     <a href="/projects.html">Projects</a>
                 </div>
 
+                 <div>
+                    <a href="/resume.html">Resume</a>
+                </div>
+
                 <div>
                     <a href="/contact.html">Contact</a>
                 </div>
@@ -149,19 +185,19 @@
 
             <!-- Social Handles section -->
             <div class="col">
-                <h5><span class="text-warning">Social Handles</span></h5>
+                <h5><span class="text-primary">Social Handles</span></h5>
 
-                <div class="h3 mb-2">
+                <div class="h6 mb-2">
                     <a href="/Instagram"></a>
                     <i class="bi bi-instagram"></i>
                 </div>
 
-                <div class="h3 mb-2">
+                <div class="h6 mb-2">
                     <a href="/Facebook"></a>
                     <i class="bi bi-facebook"></i>
                 </div>
 
-                <div class="h3 mb-2">
+                <div class="h6 mb-2">
                     <a href="/Twitter"></a>
                     <i class="bi bi-twitter"></i>
                 </div>
@@ -176,9 +212,9 @@
 
             <!-- Contact Me section -->
             <div class="col">
-                <h5><span class="text-warning">Contact Me</span></h5>
+                <h5><span class="text-primary">Contact Me</span></h5>
 
-                <div class="h4 mb-2 col">
+                <div class="h6 mb-2 col">
                     <span class="ps-3">
                         <a href="/telephone"></a>
                         <i class="bi bi-telephone">
@@ -187,7 +223,7 @@
                     </span>
                 </div>
 
-                <div class="h4 mb-2 col">
+                <div class="h6 mb-2 col">
                     <span class="ps-3">
                         <a href="/whatsapp"></a>
                         <i class="bi bi-whatsapp">
@@ -196,7 +232,7 @@
                     </span>
                 </div>
 
-                <div class="h4 mb-2 col">
+                <div class="h6 mb-2 col">
                     <span class="ps-5">
                         <a href="/envelope"></a>
                         <i class="bi bi-envelope">
@@ -207,11 +243,11 @@
             </div>
         </div>
 
-          <div class="container text-center mt-5">
-                    <p class="lead">
-                        Copyright &copy; 2025 Atuasiire Daren Cared
-                    </p>
-                </div>
+        <div class="container text-center mt-2">
+            <p class="lead">
+                Copyright &copy; 2025 Atuasiire Daren Cared
+            </p>
+        </div>
 
 
 
