--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
     <!-- Bootsrap CSS  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
 
 </head>
@@ -17,10 +18,10 @@
 <body>
 
     <!-- Nav bar -->
-    <nav class="navbar navbar-expand-lg  navbar-light bg-secondary">
+    <nav class="navbar navbar-expand-lg  navbar-light bg-primary">
         <div class="container-fluid">
             <a class="navbar-brand" href="about.html">
-                <span class="h3 fw-bold text-white"><span class="text-white">My Portfolio</span></span>
+               <img src="/images/logo.png" alt="logo" style="height:90px">
 
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -41,6 +42,10 @@
                         <a class="nav-link text-white" href="/projects.html">Projects</a>
                     </li>
 
+                    <li>
+                        <a class="nav-link text-white" href="/resume.html">Resume</a>
+                    </li>
+
                     <li class="nav-item">
                         <a class="nav-link text-white" href="/contact.html ">Contact</a>
                     </li>
@@ -51,41 +56,42 @@
     </nav>
 
 
-    <section class="jumbotron jumbotron-fluid text-center bg-dark text-white p-5 text-sm-start vh-100">
+    <section class="jumbotron jumbotron-fluid text-center bg-secondary fw-bold text-dark p-5 text-sm-start vh-100 ">
         <div class="container">
-            <div class="container text-center fw-bold display-4">
+            <div class="container text-center fw-bold display-4 pl-5">
                 <h3>
-                    <span class="text-warning">Talk to Me</span>
+                    <span class="text-white fw-bold">Talk to Me</span>
                 </h3>
 
             </div>
             <div class="d-md-flex align-items-center justify-content-between d-sm-flex pt-5">
                 <div>
-                    <p class="lead my-4">Let's work together!<br> Have a project in mind or just want to say hi?<br> I'd
-                        love to hear from you.</p>
-                    <a href="#" class="link-custom text-white"><span class="text-warning">Call</span>:  0770987258</a>
+                    <p class="lead my-4"><span class="fw-bold">Let's work together! Have a project in mind<br> or just want to say hi?<br> I'd
+                        love to hear from you.</span></p>
+                    <a href="#" class="link-custom text-white"><span class="text-dark fw-bold">Call</span>: 0770987258</a>
                 </div>
 
 
                 <form class="col g-3 needs-validation" novalidate>
                     <div class="container form-sm-start">
                         <div class="">
-                    <div class="mb-3 form-control-input">
-                        <label for="exampleFormControlInput-w-50%" class="form-label"> Your Name</label>
-                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name">
-                    </div>
-                    <div class="mb-3">
-                        <label for="exampleFormControlInput1" class="form-label">Your Email</label>
-                        <input type="email" class="form-control" id="exampleFormControlInput1"
-                            placeholder="name@example.com">
-                    </div>
-                    <div class="mb-3">
-                        <label for="exampleFormControlTextarea1" class="form-label">Message</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                    </div>
-                    <div class="col-12">
-                        <button class="btn btn-primary" type="submit">Send</button>
-                    </div>
+                            <div class="mb-3 form-control-input">
+                                <label for="exampleFormControlInput-w-50%" class="form-label"> Your Name</label>
+                                <input type="email" class="form-control" id="exampleFormControlInput1"
+                                    placeholder="name">
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleFormControlInput1" class="form-label">Your Email</label>
+                                <input type="email" class="form-control" id="exampleFormControlInput1"
+                                    placeholder="name@example.com">
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                            </div>
+                            <div class="col-12">
+                                <button class="btn btn-primary" type="submit">Send</button>
+                            </div>
                 </form>
             </div>
         </div>
@@ -93,18 +99,113 @@
     </section>
 
 
+    <!-- Footer section -->
+    <section class="bg-dark text-white text-center py-4 mt-0">
+        <div class="row">
+            <div class="col">
+                <h5><span class="text-primary">Quick Links</span></h5>
+                <div>
+                    <a href="/index.html">Home</a>
+                </div>
+
+                <div>
+                    <a href="/about.html">About</a>
+                </div>
+
+                <div>
+                    <a href="/projects.html">Projects</a>
+                </div>
+
+                 <div>
+                    <a href="/resume.html">Resume</a>
+                </div>
+
+                <div>
+                    <a href="/contact.html">Contact</a>
+                </div>
+            </div>
+
+
+            <!-- Social Handles section -->
+            <div class="col">
+                <h5><span class="text-primary">Social Handles</span></h5>
+
+                <div class="h6 mb-2">
+                    <a href="/Instagram"></a>
+                    <i class="bi bi-instagram"></i>
+                </div>
+
+                <div class="h6 mb-2">
+                    <a href="/Facebook"></a>
+                    <i class="bi bi-facebook"></i>
+                </div>
+
+                <div class="h6 mb-2">
+                    <a href="/Twitter"></a>
+                    <i class="bi bi-twitter"></i>
+                </div>
+
+                <div>
+                    <a href="/linkedln"></a>
+                    <i class="bi bi-in"></i>
+                </div>
+
+            </div>
+
+
+            <!-- Contact Me section -->
+            <div class="col">
+                <h5><span class="text-primary">Contact Me</span></h5>
+
+                <div class="h6 mb-2 col">
+                    <span class="ps-3">
+                        <a href="/telephone"></a>
+                        <i class="bi bi-telephone">
+                            +256708968247
+                        </i>
+                    </span>
+                </div>
+
+                <div class="h6 mb-2 col">
+                    <span class="ps-3">
+                        <a href="/whatsapp"></a>
+                        <i class="bi bi-whatsapp">
+                            +256770987258
+                        </i>
+                    </span>
+                </div>
+
+                <div class="h6 mb-2 col">
+                    <span class="ps-5">
+                        <a href="/envelope"></a>
+                        <i class="bi bi-envelope">
+                            adc12@gmail.com
+                        </i>
+                    </span>
+                </div>
+            </div>
+        </div>
+
+        <div class="container text-center mt-2">
+            <p class="lead">
+                Copyright &copy; 2025 Atuasiire Daren Cared
+            </p>
+        </div>
 
 
 
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-        crossorigin="anonymous"></script>
+
+
+
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+            integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+            integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
