--- a/projects.html
+++ b/projects.html
@@ -10,16 +10,17 @@
     <!-- Bootsrap CSS  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
 </head>
 
 <body>
 
     <!-- Nav bar -->
-    <nav class="navbar navbar-expand-lg  navbar-light bg-dark">
+    <nav class="navbar navbar-expand-lg  navbar-light bg-primary">
         <div class="container-fluid">
             <a class="navbar-brand" href="about.html">
-                <span class="h3 fw-bold text-white"><span class="text-white">My Portfolio</span></span>
+                 <img src="/images/logo.png" alt="logo" style="height:90px">
 
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -40,6 +41,10 @@
                         <a class="nav-link text-white" href="/projects.html">Projects</a>
                     </li>
 
+                    <li>
+                        <a class="nav-link text-white" href="/resume.html">Resume</a>
+                    </li>
+
                     <li class="nav-item">
                         <a class="nav-link text-white" href="/contact.html">Contact</a>
                     </li>
@@ -54,7 +59,7 @@
     <section class="bg-secondary vh-100 p-5">
         <div class="container text-center">
             <h3>
-                <span class="text-warning fw-bold m-5">My Projects</span>
+                <span class="text-white fw-bold m-5">My Projects</span>
             </h3>
         </div>
         <div class="container mt-5">
@@ -65,7 +70,7 @@
                             <div>
                                 <img src="/images/BFSCHOOL.jpg" class="card-img-top bg-dark" alt="image">
                                 <div class="card-body bg-dark">
-                                    <h5 class="card-title"><span class="text-warning">School
+                                    <h5 class="card-title"><span class="text-primary">School
                                             Website</span></h5>
                                     <p class="card-text">
                                         I developed a school wbsite that provides easy access to school
@@ -86,7 +91,7 @@
                         <div class="card-body bg-dark text-center">
                             <img src="/images/nexcld.jpg" class="card-img-top w-75" alt="image">
                             <div class="card-body">
-                                <h5 class="card-title"><span class="text-warning">Nexcloud
+                                <h5 class="card-title"><span class="text-primary">Nexcloud
                                         Website</span></h5>
                                 <p class="card-text">
                                     I designed and developed a professional website for an IT company to
@@ -102,6 +107,101 @@
     </section>
 
         
+    <!-- Footer section -->
+    <section class="bg-dark text-white text-center py-4 mt-0">
+        <div class="row">
+            <div class="col">
+                <h5><span class="text-primary">Quick Links</span></h5>
+                <div>
+                    <a href="/index.html">Home</a>
+                </div>
+
+                <div>
+                    <a href="/about.html">About</a>
+                </div>
+
+                <div>
+                    <a href="/projects.html">Projects</a>
+                </div>
+
+                 <div>
+                    <a href="/resume.html">Resume</a>
+                </div>
+
+                <div>
+                    <a href="/contact.html">Contact</a>
+                </div>
+            </div>
+
+
+            <!-- Social Handles section -->
+            <div class="col">
+                <h5><span class="text-primary">Social Handles</span></h5>
+
+                <div class="h6 mb-2">
+                    <a href="/Instagram"></a>
+                    <i class="bi bi-instagram"></i>
+                </div>
+
+                <div class="h6 mb-2">
+                    <a href="/Facebook"></a>
+                    <i class="bi bi-facebook"></i>
+                </div>
+
+                <div class="h6 mb-2">
+                    <a href="/Twitter"></a>
+                    <i class="bi bi-twitter"></i>
+                </div>
+
+                <div>
+                    <a href="/linkedln"></a>
+                    <i class="bi bi-in"></i>
+                </div>
+
+            </div>
+
+
+            <!-- Contact Me section -->
+            <div class="col">
+                <h5><span class="text-primary">Contact Me</span></h5>
+
+                <div class="h6 mb-2 col">
+                    <span class="ps-3">
+                        <a href="/telephone"></a>
+                        <i class="bi bi-telephone">
+                            +256708968247
+                        </i>
+                    </span>
+                </div>
+
+                <div class="h6 mb-2 col">
+                    <span class="ps-3">
+                        <a href="/whatsapp"></a>
+                        <i class="bi bi-whatsapp">
+                            +256770987258
+                        </i>
+                    </span>
+                </div>
+
+                <div class="h6 mb-2 col">
+                    <span class="ps-5">
+                        <a href="/envelope"></a>
+                        <i class="bi bi-envelope">
+                            adc12@gmail.com
+                        </i>
+                    </span>
+                </div>
+            </div>
+        </div>
+
+          <div class="container text-center mt-2">
+                    <p class="lead">
+                        Copyright &copy; 2025 Atuasiire Daren Cared
+                    </p>
+                </div>
+
+
+
 
 
 
