--- a/Index.html
+++ b/Index.html
@@ -77,19 +77,19 @@
                     <p class="lead my-4 mt-5 text-white">
                         I'm a junior web developer skilled in HTML, CSS, and Bootstrap,<br> with a passion for creating
                         clean,
-                        responsive, and user-friendly<br> websites. I focuses on turning ideas
+                        responsive, and user-friendly<br> websites. I focus on turning ideas
                         into functional designs,
                         applying<br> my knowledge to build modern interfaces while continuously<br>
                         improving my web development
                         skills.
                     </p>
-                    <p class="text-dark fw-bold fst-italic">
-                        Ideate | Innovate | Get It Done
+                   
 
-                    </p>
-                    <button type="button" class="btn btn-lg btn-info mt-5" enabled>Explore My Work</button>
+                    <a href="projects.html" class="btn btn-primary">
+                        Explore My Projects
+                    </a>
                 </div>
-                <img class="img-fluid w-25" src="/images/2955425-removebg-preview (1).png" alt="Image">
+                <img class="img-fluid w-25 img-thumbnail width-100 height-100 d-none d-sm-block" src="/images/careddd.jpg" alt="Image">
             </div>
         </div>
     </section>
@@ -99,6 +99,7 @@
 
     <section>
         <div class="container pt-5">
+            <h4 class="text-center text-dark fw-bold ">My Services</h4>
             <div class="row text-center">
                 <div class="col-md">
                     <div class="card-body text-center">
@@ -173,7 +174,7 @@
                     <a href="/projects.html">Projects</a>
                 </div>
 
-                 <div>
+                <div>
                     <a href="/resume.html">Resume</a>
                 </div>
 
