--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
 
                         </p>
                     </div>
-                    <img class="img-fluid w-25" src="/images/HNQ_0775-removebg-preview.png" alt="image">
+                    <img class="img-fluid w-25" src="/images/Daren Cared.png" alt="image">
                 </div>
             </div>
         </div>
