--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg  navbar-light bg-primary">
         <div class="container-fluid">
             <a class="navbar-brand" href="about.html">
-               <img src="/images/logo.png" alt="logo" style="height:90px">
+                <img src="/images/logo.png" alt="logo" style="height:90px">
 
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -66,9 +66,11 @@
             </div>
             <div class="d-md-flex align-items-center justify-content-between d-sm-flex pt-5">
                 <div>
-                    <p class="lead my-4"><span class="fw-bold">Let's work together! Have a project in mind<br> or just want to say hi?<br> I'd
-                        love to hear from you.</span></p>
-                    <a href="#" class="link-custom text-white"><span class="text-dark fw-bold">Call</span>: 0770987258</a>
+                    <p class="lead my-4"><span class="fw-bold">Let's work together! Have a project in mind<br> or just
+                            want to say hi?<br> I'd
+                            love to hear from you.</span></p>
+                    <a href="#" class="link-custom text-white"><span class="text-dark fw-bold">Call</span>:
+                        0770987258</a>
                 </div>
 
 
@@ -90,7 +92,9 @@
                                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                             </div>
                             <div class="col-12">
-                                <button class="btn btn-primary" type="submit">Send</button>
+                                <a href="mailto:atusasiiredarencared58@gmail.com" class="btn btn-primary">
+                                    Send
+                                </a>
                             </div>
                 </form>
             </div>
@@ -116,7 +120,7 @@
                     <a href="/projects.html">Projects</a>
                 </div>
 
-                 <div>
+                <div>
                     <a href="/resume.html">Resume</a>
                 </div>
 
