--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
     <!-- Bootsrap CSS  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
 </head>
 
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg  navbar-light bg-primary">
         <div class="container-fluid">
             <a class="navbar-brand" href="about.html">
-                 <img src="/images/logo.png" alt="logo" style="height:90px">
+                <img src="/images/logo.png" alt="logo" style="height:90px">
 
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -78,6 +78,10 @@
                                         announcements,academic resources, and contact information
                                     </p>
 
+                                      <a href="BrightFutureSchool/BrightFutureSchool.html" class="btn btn-primary">
+                                    View Project
+                                </a>
+
                                 </div>
                             </div>
                         </div>
@@ -98,6 +102,9 @@
                                     showcase its services, contact channels it's location and portfolio
                                 </p>
 
+                                <a href="nex-cloud-project/index.html" class="btn btn-primary">
+                                    View Project
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -106,7 +113,7 @@
         </div>
     </section>
 
-        
+
     <!-- Footer section -->
     <section class="bg-dark text-white text-center py-4 mt-0">
         <div class="row">
@@ -124,7 +131,7 @@
                     <a href="/projects.html">Projects</a>
                 </div>
 
-                 <div>
+                <div>
                     <a href="/resume.html">Resume</a>
                 </div>
 
@@ -194,11 +201,11 @@
             </div>
         </div>
 
-          <div class="container text-center mt-2">
-                    <p class="lead">
-                        Copyright &copy; 2025 Atuasiire Daren Cared
-                    </p>
-                </div>
+        <div class="container text-center mt-2">
+            <p class="lead">
+                Copyright &copy; 2025 Atuasiire Daren Cared
+            </p>
+        </div>
 
 
 
@@ -208,12 +215,12 @@
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-        crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+            integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+            integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
