--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-lg  navbar-secondary bg-primary py-1 fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="/images/logo.png" alt="logo" style="height:90px">
+                <img src="/Pages/images/logo.png" alt="logo" style="height:90px">
 
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -39,18 +39,18 @@
                         <a class="nav-link active text-white" aria-current="page" href="/Index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="/about.html">About</a>
+                        <a class="nav-link text-white" href="/Pages/about.html">About</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="/projects.html">Projects</a>
+                        <a class="nav-link text-white" href="/Pages/projects.html">Projects</a>
                     </li>
                     <li>
-                        <a class="nav-link text-white" href="/resume.html">Resume</a>
+                        <a class="nav-link text-white" href="Pages/Resume.html">Resume</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="/contact.html">Contact</a>
+                        <a class="nav-link text-white" href="Pages/contact.html">Contact Me</a>
                     </li>
 
 
@@ -89,7 +89,7 @@
                         Explore My Projects
                     </a>
                 </div>
-                <img class="img-fluid w-25 img-thumbnail width-100 height-100 d-none d-sm-block" src="/images/careddd.jpg" alt="Image">
+                <img class="img-fluid w-25 img-thumbnail width-100 height-100 d-none d-sm-block" src="/Pages/images/careddd.jpg" alt="Image">
             </div>
         </div>
     </section>
