--- a/pages/projects.html
+++ b/pages/projects.html
@@ -145,19 +145,19 @@
                 </div>
 
                 <div>
-                    <a href="/about.html">About</a>
+                    <a href="/Pages/about.html">About</a>
                 </div>
 
                 <div>
-                    <a href="/projects.html">Projects</a>
+                    <a href="/Pages/projects.html">Projects</a>
                 </div>
 
                 <div>
-                    <a href="/resume.html">Resume</a>
+                    <a href="/Pages/Resume.html">Resume</a>
                 </div>
 
                 <div>
-                    <a href="/contact.html">Contact Me</a>
+                    <a href="/Pages/contact.html">Contact Me</a>
                 </div>
             </div>
 
