--- a/index.html
+++ b/index.html
@@ -36,21 +36,21 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-5 ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="A.D.CARED-PORTFOLIO/index.html">Home</a>
+                        <a class="nav-link active text-white" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="/A.D.CARED-PORTFOLIO/Pages/about.html">About</a>
+                        <a class="nav-link text-white" href="/Pages/about.html">About</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="/A.D.CARED-PORTFOLIO/Pages/projects.html">Projects</a>
+                        <a class="nav-link text-white" href="/Pages/projects.html">Projects</a>
                     </li>
                     <li>
-                        <a class="nav-link text-white" href="/A.D.CARED-PORTFOLIO/Pages/Resume.html">Resume</a>
+                        <a class="nav-link text-white" href="/Pages/Resume.html">Resume</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="/A.D.CARED-PORTFOLIO/Pages/contact.html">Contact Me</a>
+                        <a class="nav-link text-white" href="/Pages/contact.html">Contact Me</a>
                     </li>
 
                 </ul>
