reogarnized the links

--- a/Resume.html
+++ b/Resume.html
@@ -46,7 +46,7 @@
                         <a class="nav-link text-white" href="/projects.html">Projects</a>
                     </li>
                     <li>
-                        <a class="nav-link text-white" href="/Resume.html">Resume</a>
+                        <a class="nav-link text-white" href="/A.D.CARED-PORTFOLIO/Resume.html">Resume</a>
                     </li>
 
                     <li class="nav-item">
