--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="/contact.html">Contact Me</a>
+                        <a class="nav-link text-white" href="/A.D.CARED-PORTFOLIO/contact.html">Contact Me</a>
                     </li>
                 </ul>
 
