--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
                         <a class="nav-link active text-white" aria-current="page" href="/Index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="/about.html">About</a>
+                        <a class="nav-link text-white" href="/A.D.CARED-PORTFOLIO/about.html">About</a>
                     </li>
 
                     <li class="nav-item">
