--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="/projects.html">Projects</a>
+                        <a class="nav-link text-white" href="/A.D.CARED-PORTFOLIO/projects.html">Projects</a>
                     </li>
 
                     <li>
