--- a/Resume.html
+++ b/Resume.html
@@ -36,21 +36,21 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-5 ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="/Index.html">Home</a>
+                        <a class="nav-link active text-white" aria-current="page" href="/A.D.CARED-PORTFOLIO/Index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="/about.html">About</a>
+                        <a class="nav-link text-white" href="/A.D.CARED-PORTFOLIO/about.html">About</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="/projects.html">Projects</a>
+                        <a class="nav-link text-white" href="/A.D.CARED-PORTFOLIO/projects.html">Projects</a>
                     </li>
                     <li>
                         <a class="nav-link text-white" href="/A.D.CARED-PORTFOLIO/Resume.html">Resume</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="/contact.html">Contact Me</a>
+                        <a class="nav-link text-white" href="/A.D.CARED-PORTFOLIO/contact.html">Contact Me</a>
                     </li>
 
 
