--- a/about.html
+++ b/about.html
@@ -31,22 +31,22 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="/Index.html">Home</a>
+                        <a class="nav-link active text-white" aria-current="page" href="/A.D.CARED-PORTFOLIO/Index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="/A.D.CARED-PORTFOLIO/about.html">About</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="/projects.html">Projects</a>
+                        <a class="nav-link text-white" href="/A.D.CARED-PORTFOLIO/projects.html">Projects</a>
                     </li>
 
                     <li>
-                        <a class="nav-link text-white" href="/Resume.html">Resume</a>
+                        <a class="nav-link text-white" href="/A.D.CARED-PORTFOLIO/Resume.html">Resume</a>
                     </li>
 
                     <li class="nav-item"> 
-                        <a class="nav-link text-white" href="/contact.html">Contact</a>
+                        <a class="nav-link text-white" href="/A.D.CARED-PORTFOLIO/contact.html">Contact</a>
                     </li>
 
 
