--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-5 ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="A.D.CARED-PORTFOLIO/index.html">Home</a>
+                        <a class="nav-link active text-white" aria-current="page" href="/A.D.CARED-PORTFOLIO/index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="/A.D.CARED-PORTFOLIO/about.html">About</a>
@@ -48,7 +48,6 @@
                     <li>
                         <a class="nav-link text-white" href="/A.D.CARED-PORTFOLIO/Resume.html">Resume</a>
                     </li>
-
                     <li class="nav-item">
                         <a class="nav-link text-white" href="/A.D.CARED-PORTFOLIO/contact.html">Contact Me</a>
                     </li>
