--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="/A.D.CARED-PORTFOLIO/Index.html">Home</a>
+                        <a class="nav-link active text-white" aria-current="page" href="/A.D.CARED-PORTFOLIO/index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="/A.D.CARED-PORTFOLIO/about.html">About</a>
