--- a/projects.html
+++ b/projects.html
@@ -102,7 +102,7 @@
                                     showcase its services, contact channels it's location and portfolio
                                 </p>
 
-                                <a href="nex-cloud-project/index.html" class="btn btn-primary">
+                                <a href=" https://atusasiire.github.io/Nex-cloud-Business-Project/" class="btn btn-primary">
                                     View Project
                                 </a>
                             </div>
@@ -123,7 +123,7 @@
                                     my skills, projects i have worked on and the languages used
                                 </p>
 
-                                <a href="A.D CARED PORTFOLIO " class="btn btn-primary">
+                                <a href="https://atusasiire.github.io/A.D.CARED-PORTFOLIO/" class="btn btn-primary">
                                     View Project
                                 </a>
                             </div>
