--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         Explore My Projects
                     </a>
                 </div>
-                <img class="img-fluid w-25 img-thumbnail width-100 height-100 d-none d-sm-block" src="./images/careddd.jpg" alt="Image">
+                <img class="img-fluid w-25 img-thumbnail width-100 height-100 d-none d-sm-block" src="./images/daren123.jpg" alt="Image">
             </div>
         </div>
     </section>
@@ -208,7 +208,7 @@
             </div>
 
 
-            <!-- Contact Me section -->
+            <!--  Contact Me section -->
             <div class="col">
                 <h5><span class="text-primary">Contact Me</span></h5>
 
