--- a/contact.html
+++ b/contact.html
@@ -109,23 +109,23 @@
             <div class="col">
                 <h5><span class="text-primary">Quick Links</span></h5>
                 <div>
-                    <a href="/index.html">Home</a>
+                    <a href="/A.D.CARED-PORTFOLIO/index.html">Home</a>
                 </div>
 
                 <div>
-                    <a href="/about.html">About</a>
+                    <a href="/A.D.CARED-PORTFOLIO/about.html">About</a>
                 </div>
 
                 <div>
-                    <a href="/projects.html">Projects</a>
+                    <a href="/A.D.CARED-PORTFOLIO/projects.html">Projects</a>
                 </div>
 
                 <div>
-                    <a href="/resume.html">Resume</a>
+                    <a href="/A.D.CARED-PORTFOLIO/resume.html">Resume</a>
                 </div>
 
                 <div>
-                    <a href="/contact.html">Contact</a>
+                    <a href="/A.D.CARED-PORTFOLIO/contact.html">Contact</a>
                 </div>
             </div>
 
