--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         Explore My Projects
                     </a>
                 </div>
-                <img class="img-fluid w-25 img-thumbnail width-100 height-100 d-none d-sm-block" src="./images/daren123.jpg" alt="Image">
+                <img class="img-fluid w-100 img-thumbnail width-100 height-100 d-none d-sm-block" src="./images/daren123.jpg" alt="Image">
             </div>
         </div>
     </section>
@@ -158,25 +158,25 @@
     <section class="bg-dark text-white text-center py-4 mt-5">
         <div class="row">
             <div class="col">
-                <h5><span class="text-primary">Quick Links</span></h5>
+                <h5><span class="text-primary text-decoration-none">Quick Links</span></h5>
                 <div>
-                    <a href="/index.html">Home</a>
+                    <a href="/A.D.CARED-PORTFOLIO/index.html">Home</a>
                 </div>
 
                 <div>
-                    <a href="/about.html">About</a>
+                    <a href="/A.D.CARED-PORTFOLIO/about.html">About</a>
                 </div>
 
                 <div>
-                    <a href="/projects.html">Projects</a>
+                    <a href="/A.D.CARED-PORTFOLIO/projects.html">Projects</a>
                 </div>
 
                 <div>
-                    <a href="/resume.html">Resume</a>
+                    <a href="/A.D.CARED-PORTFOLIO/resume.html">Resume</a>
                 </div>
 
                 <div>
-                    <a href="/contact.html">Contact</a>
+                    <a href="/A.D.CARED-PORTFOLIO/contact.html">Contact</a>
                 </div>
             </div>
 
