--- a/projects.html
+++ b/projects.html
@@ -141,23 +141,23 @@
             <div class="col">
                 <h5><span class="text-primary">Quick Links</span></h5>
                 <div>
-                    <a href="/index.html">Home</a>
+                    <a href="/A.D.CARED-PORTFOLIO/index.html">Home</a>
                 </div>
 
                 <div>
-                    <a href="/Pages/about.html">About</a>
+                    <a href="/A.D.CARED-PORTFOLIO/Pages/about.html">About</a>
                 </div>
 
                 <div>
-                    <a href="/Pages/projects.html">Projects</a>
+                    <a href="/A.D.CARED-PORTFOLIO/Pages/projects.html">Projects</a>
                 </div>
 
                 <div>
-                    <a href="/Pages/Resume.html">Resume</a>
+                    <a href="/A.D.CARED-PORTFOLIO/Pages/Resume.html">Resume</a>
                 </div>
 
                 <div>
-                    <a href="/Pages/contact.html">Contact Me</a>
+                    <a href="/A.D.CARED-PORTFOLIO/Pages/contact.html">Contact Me</a>
                 </div>
             </div>
 
