--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
             <div class="col">
                 <h5><span class="text-primary ">Quick Links</span></h5>
 
-                <div class="text-decoration-none">
-                    <a href="/A.D.CARED-PORTFOLIO/index.html">Home</a>
+                <div>
+                    <a href="/A.D.CARED-PORTFOLIO/index.html"  class="text-decoration-none">Home</a>
                 </div>
 
                 <div class="text-decoration-none">
