--- a/index.html
+++ b/index.html
@@ -168,16 +168,16 @@
                     <a href="/A.D.CARED-PORTFOLIO/about.html">About</a>
                 </div>
 
-                <div class="text-decoration-none">
-                    <a href="/A.D.CARED-PORTFOLIO/projects.html">Projects</a>
+                <div >
+                    <a href="/A.D.CARED-PORTFOLIO/projects.html" class="text-decoration-none">Projects</a>
                 </div>
 
-                <div class="text-decoration-none">
-                    <a href="/A.D.CARED-PORTFOLIO/resume.html">Resume</a>
+                <div>
+                    <a href="/A.D.CARED-PORTFOLIO/resume.html" class="text-decoration-none"></a>>Resume</a>
                 </div>
 
-                <div class="text-decoration-none">
-                    <a href="/A.D.CARED-PORTFOLIO/contact.html">Contact</a>
+                <div>
+                    <a href="/A.D.CARED-PORTFOLIO/contact.html" class="text-decoration-none"></a>>Contact</a>
                 </div>
             </div>
 
@@ -186,23 +186,23 @@
             <div class="col">
                 <h5><span class="text-primary">Social Handles</span></h5>
 
-                <div class="h6 mb-2">
+                <div class="h6 mb-2 fst-normal">
                     <a href="/Instagram"></a>
                     <i class="bi bi-instagram"></i>
                 </div>
 
-                <div class="h6 mb-2">
+                <div class="h6 mb-2  fst-normal">
                     <a href="/Facebook"></a>
                     <i class="bi bi-facebook"></i>
                 </div>
 
-                <div class="h6 mb-2">
+                <div class="h6 mb-2  fst-normal">
                     <a href="/Twitter"></a>
                     <i class="bi bi-twitter"></i>
                 </div>
 
                 <div>
-                    <a href="/linkedln"></a>
+                    <a href="/linkedln  fst-normal"></a>
                     <i class="bi bi-in"></i>
                 </div>
 
@@ -214,7 +214,7 @@
                 <h5><span class="text-primary">Contact Me</span></h5>
 
                 <div class="h6 mb-2 col">
-                    <span class="ps-3">
+                    <span class="ps-3  fst-normal">
                         <a href="/telephone"></a>
                         <i class="bi bi-telephone">
                             +256708968247
@@ -222,7 +222,7 @@
                     </span>
                 </div>
 
-                <div class="h6 mb-2 col">
+                <div class="h6 mb-2 col  fst-normal">
                     <span class="ps-3">
                         <a href="/whatsapp"></a>
                         <i class="bi bi-whatsapp">
@@ -231,7 +231,7 @@
                     </span>
                 </div>
 
-                <div class="h6 mb-2 col">
+                <div class="h6 mb-2 col  fst-normal">
                     <span class="ps-5">
                         <a href="/envelope"></a>
                         <i class="bi bi-envelope">
