--- a/contact.html
+++ b/contact.html
@@ -109,23 +109,23 @@
             <div class="col">
                 <h5><span class="text-primary">Quick Links</span></h5>
                 <div>
-                    <a href="/A.D.CARED-PORTFOLIO/index.html">Home</a>
+                    <a href="/A.D.CARED-PORTFOLIO/index.html" class="text-decoration-none"></a>>Home</a>
                 </div>
 
                 <div>
-                    <a href="/A.D.CARED-PORTFOLIO/about.html">About</a>
+                    <a href="/A.D.CARED-PORTFOLIO/about.html" class="text-decoration-none"></a>>About</a>
                 </div>
 
                 <div>
-                    <a href="/A.D.CARED-PORTFOLIO/projects.html">Projects</a>
+                    <a href="/A.D.CARED-PORTFOLIO/projects.html" class="text-decoration-none"></a>>Projects</a>
                 </div>
 
                 <div>
-                    <a href="/A.D.CARED-PORTFOLIO/resume.html">Resume</a>
+                    <a href="/A.D.CARED-PORTFOLIO/resume.html" class="text-decoration-none"></a>>Resume</a>
                 </div>
 
                 <div>
-                    <a href="/A.D.CARED-PORTFOLIO/contact.html">Contact</a>
+                    <a href="/A.D.CARED-PORTFOLIO/contact.html" class="text-decoration-none"></a>>Contact</a>
                 </div>
             </div>
 
@@ -162,7 +162,7 @@
                 <h5><span class="text-primary">Contact Me</span></h5>
 
                 <div class="h6 mb-2 col">
-                    <span class="ps-3">
+                    <span class="ps-3  fst-normal">
                         <a href="/telephone"></a>
                         <i class="bi bi-telephone">
                             +256708968247
@@ -171,7 +171,7 @@
                 </div>
 
                 <div class="h6 mb-2 col">
-                    <span class="ps-3">
+                    <span class="ps-3  fst-normal">
                         <a href="/whatsapp"></a>
                         <i class="bi bi-whatsapp">
                             +256770987258
@@ -180,7 +180,7 @@
                 </div>
 
                 <div class="h6 mb-2 col">
-                    <span class="ps-5">
+                    <span class="ps-5  fst-normal">
                         <a href="/envelope"></a>
                         <i class="bi bi-envelope">
                             adc12@gmail.com
