--- a/projects.html
+++ b/projects.html
@@ -141,23 +141,23 @@
             <div class="col">
                 <h5><span class="text-primary">Quick Links</span></h5>
                 <div>
-                    <a href="/A.D.CARED-PORTFOLIO/index.html">Home</a>
+                    <a href="/A.D.CARED-PORTFOLIO/index.html" class="text-decoration-none"></a>>Home</a>
                 </div>
 
                 <div>
-                    <a href="/A.D.CARED-PORTFOLIO/Pages/about.html">About</a>
+                    <a href="/A.D.CARED-PORTFOLIO/Pages/about.html" class="text-decoration-none"></a>>About</a>
                 </div>
 
                 <div>
-                    <a href="/A.D.CARED-PORTFOLIO/Pages/projects.html">Projects</a>
+                    <a href="/A.D.CARED-PORTFOLIO/Pages/projects.html" class="text-decoration-none"></a>>Projects</a>
                 </div>
 
                 <div>
-                    <a href="/A.D.CARED-PORTFOLIO/Pages/Resume.html">Resume</a>
+                    <a href="/A.D.CARED-PORTFOLIO/Pages/Resume.html" class="text-decoration-none"></a>>Resume</a>
                 </div>
 
                 <div>
-                    <a href="/A.D.CARED-PORTFOLIO/Pages/contact.html">Contact Me</a>
+                    <a href="/A.D.CARED-PORTFOLIO/Pages/contact.html" class="text-decoration-none"></a>>Contact Me</a>
                 </div>
             </div>
 
@@ -194,7 +194,7 @@
                 <h5><span class="text-primary">Contact Me</span></h5>
 
                 <div class="h6 mb-2 col">
-                    <span class="ps-3">
+                    <span class="ps-3  fst-normal">
                         <a href="/telephone"></a>
                         <i class="bi bi-telephone">
                             +256708968247
@@ -203,7 +203,7 @@
                 </div>
 
                 <div class="h6 mb-2 col">
-                    <span class="ps-3">
+                    <span class="ps-3  fst-normal">
                         <a href="/whatsapp"></a>
                         <i class="bi bi-whatsapp">
                             +256770987258
@@ -212,7 +212,7 @@
                 </div>
 
                 <div class="h6 mb-2 col">
-                    <span class="ps-5">
+                    <span class="ps-5  fst-normal">
                         <a href="/envelope"></a>
                         <i class="bi bi-envelope">
                             adc12@gmail.com
