--- a/index.html
+++ b/index.html
@@ -173,11 +173,11 @@
                 </div>
 
                 <div>
-                    <a href="/A.D.CARED-PORTFOLIO/resume.html" class="text-decoration-none"></a>>Resume</a>
+                    <a href="/A.D.CARED-PORTFOLIO/resume.html" class="text-decoration-none"></a>Resume</a>
                 </div>
 
                 <div>
-                    <a href="/A.D.CARED-PORTFOLIO/contact.html" class="text-decoration-none"></a>>Contact</a>
+                    <a href="/A.D.CARED-PORTFOLIO/contact.html" class="text-decoration-none"></a>Contact</a>
                 </div>
             </div>
 
