--- a/projects.html
+++ b/projects.html
@@ -141,23 +141,23 @@
             <div class="col">
                 <h5><span class="text-primary">Quick Links</span></h5>
                 <div>
-                    <a href="/A.D.CARED-PORTFOLIO/index.html" class="text-decoration-none"></a>>Home</a>
+                    <a href="/A.D.CARED-PORTFOLIO/index.html" class="text-decoration-none"></a>Home</a>
                 </div>
 
                 <div>
-                    <a href="/A.D.CARED-PORTFOLIO/Pages/about.html" class="text-decoration-none"></a>>About</a>
+                    <a href="/A.D.CARED-PORTFOLIO/Pages/about.html" class="text-decoration-none"></a>About</a>
                 </div>
 
                 <div>
-                    <a href="/A.D.CARED-PORTFOLIO/Pages/projects.html" class="text-decoration-none"></a>>Projects</a>
+                    <a href="/A.D.CARED-PORTFOLIO/Pages/projects.html" class="text-decoration-none"></a>Projects</a>
                 </div>
 
                 <div>
-                    <a href="/A.D.CARED-PORTFOLIO/Pages/Resume.html" class="text-decoration-none"></a>>Resume</a>
+                    <a href="/A.D.CARED-PORTFOLIO/Pages/Resume.html" class="text-decoration-none"></a>Resume</a>
                 </div>
 
                 <div>
-                    <a href="/A.D.CARED-PORTFOLIO/Pages/contact.html" class="text-decoration-none"></a>>Contact Me</a>
+                    <a href="/A.D.CARED-PORTFOLIO/Pages/contact.html" class="text-decoration-none"></a>Contact Me</a>
                 </div>
             </div>
 
