--- a/Resume.html
+++ b/Resume.html
@@ -147,7 +147,7 @@
         <div class="col">
             <h5><span class="text-primary">Quick Links</span></h5>
             <div>
-                <a href="/A.D.CARED-PORTFOLIO/index.html" class="text-decoration-none"></a>>Home</a>
+                <a href="/A.D.CARED-PORTFOLIO/index.html" class="text-decoration-none"></a>Home</a>
             </div>
 
             <div>
@@ -155,15 +155,15 @@
             </div>
 
             <div>
-                <a href="/A.D.CARED-PORTFOLIO/projects.html" class="text-decoration-none"></a>>Projects</a>
+                <a href="/A.D.CARED-PORTFOLIO/projects.html" class="text-decoration-none"></a>Projects</a>
             </div>
 
             <div>
-                <a href="/A.D.CARED-PORTFOLIO/resume.html" class="text-decoration-none"></a>>Resume</a>
+                <a href="/A.D.CARED-PORTFOLIO/resume.html" class="text-decoration-none"></a>Resume</a>
             </div>
 
             <div>
-                <a href="/A.D.CARED-PORTFOLIO/contact.html" class="text-decoration-none"></a>>Contact</a>
+                <a href="/A.D.CARED-PORTFOLIO/contact.html" class="text-decoration-none"></a>Contact</a>
             </div>
         </div>
 
