--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
                     <a href="/A.D.CARED-PORTFOLIO/index.html"  class="text-decoration-none">Home</a>
                 </div>
 
-                <div class="text-decoration-none">
-                    <a href="/A.D.CARED-PORTFOLIO/about.html">About</a>
+                <div>
+                    <a href="/A.D.CARED-PORTFOLIO/about.html" class="text-decoration-none">About</a>
                 </div>
 
                 <div >
@@ -173,11 +173,11 @@
                 </div>
 
                 <div>
-                    <a href="/A.D.CARED-PORTFOLIO/resume.html" class="text-decoration-none"></a>Resume</a>
+                    <a href="/A.D.CARED-PORTFOLIO/resume.html" class="text-decoration-none">Resume</a>
                 </div>
 
                 <div>
-                    <a href="/A.D.CARED-PORTFOLIO/contact.html" class="text-decoration-none"></a>Contact</a>
+                    <a href="/A.D.CARED-PORTFOLIO/contact.html" class="text-decoration-none">Contact</a>
                 </div>
             </div>
 
