--- a/contact.html
+++ b/contact.html
@@ -109,23 +109,23 @@
             <div class="col">
                 <h5><span class="text-primary">Quick Links</span></h5>
                 <div>
-                    <a href="/A.D.CARED-PORTFOLIO/index.html" class="text-decoration-none"></a>Home</a>
+                    <a href="/A.D.CARED-PORTFOLIO/index.html" class="text-decoration-none">Home</a>
                 </div>
 
                 <div>
-                    <a href="/A.D.CARED-PORTFOLIO/about.html" class="text-decoration-none"></a>About</a>
+                    <a href="/A.D.CARED-PORTFOLIO/about.html" class="text-decoration-none">About</a>
                 </div>
 
                 <div>
-                    <a href="/A.D.CARED-PORTFOLIO/projects.html" class="text-decoration-none"></a>Projects</a>
+                    <a href="/A.D.CARED-PORTFOLIO/projects.html" class="text-decoration-none">Projects</a>
                 </div>
 
                 <div>
-                    <a href="/A.D.CARED-PORTFOLIO/resume.html" class="text-decoration-none"></a>Resume</a>
+                    <a href="/A.D.CARED-PORTFOLIO/resume.html" class="text-decoration-none">Resume</a>
                 </div>
 
                 <div>
-                    <a href="/A.D.CARED-PORTFOLIO/contact.html" class="text-decoration-none"></a>Contact</a>
+                    <a href="/A.D.CARED-PORTFOLIO/contact.html" class="text-decoration-none">Contact</a>
                 </div>
             </div>
 
