--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@
                 <h5><span class="text-primary">Contact Me</span></h5>
 
                 <div class="h6 mb-2 col">
-                    <span class="ps-3  fst-normal">
-                        <a href="/telephone"></a>
-                        <i class="bi bi-telephone">
+                    <span class="ps-3">
+                        <a href="/telephone" class="fst-normal"></a>
+                        <i class="bi bi-telephone fst-normal">
                             +256708968247
                         </i>
                     </span>
