--- a/Resume.html
+++ b/Resume.html
@@ -50,7 +50,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="/A.D.CARED-PORTFOLIO/contact.html">Contact Me</a>
+                        <a class="nav-link text-white" href="/A.D.CARED-PORTFOLIO/contact.html">Contact</a>
                     </li>
 
 
