--- a/contact.html
+++ b/contact.html
@@ -163,8 +163,8 @@
 
                 <div class="h6 mb-2 col">
                     <span class="ps-3  fst-normal">
-                        <a href="/telephone"></a>
-                        <i class="bi bi-telephone">
+                        <a href="/telephone" class="fst-normal"></a>
+                        <i class="bi bi-telephone fst-normal">
                             +256708968247
                         </i>
                     </span>
@@ -172,8 +172,8 @@
 
                 <div class="h6 mb-2 col">
                     <span class="ps-3  fst-normal">
-                        <a href="/whatsapp"></a>
-                        <i class="bi bi-whatsapp">
+                        <a href="/whatsapp" class="fst-normal"></a>
+                        <i class="bi bi-whatsapp fst-normal">
                             +256770987258
                         </i>
                     </span>
@@ -181,8 +181,8 @@
 
                 <div class="h6 mb-2 col">
                     <span class="ps-5  fst-normal">
-                        <a href="/envelope"></a>
-                        <i class="bi bi-envelope">
+                        <a href="/envelope" class="fst-normal"></a>
+                        <i class="bi bi-envelope fst-normal">
                             adc12@gmail.com
                         </i>
                     </span>
