--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
 
                 <div class="h6 mb-2 col  fst-normal">
                     <span class="ps-3">
-                        <a href="/whatsapp"></a>
-                        <i class="bi bi-whatsapp">
+                        <a href="/whatsapp" class="fst-normal"></a>
+                        <i class="bi bi-whatsapp fst-normal ">
                             +256770987258
                         </i>
                     </span>
@@ -233,8 +233,8 @@
 
                 <div class="h6 mb-2 col  fst-normal">
                     <span class="ps-5">
-                        <a href="/envelope"></a>
-                        <i class="bi bi-envelope">
+                        <a href="/envelope" class="fst-normal"></a>
+                        <i class="bi bi-envelope fst-normal">
                             adc12@gmail.com
                         </i>
                     </span>
