--- a/projects.html
+++ b/projects.html
@@ -113,7 +113,7 @@
 
                        <div class="col-md">
                     <div class="card w-75 bg-dark text-light mt-5 h-60">
-                        <div class="card-body background-color: whitesmoke text-center">
+                        <div class="card-body bg-whitesmoke text-center">
                             <img src="./images/portfolio.jpg" class="card-img-top w-75" alt="image">
                             <div class="card-body">
                                 <h5 class="card-title"><span class="text-primary">My
