--- a/projects.html
+++ b/projects.html
@@ -63,13 +63,13 @@
             </h3>
         </div>
         <div class="container mt-5">
-            <div class="row text-center align-items-center justify-content-center">
+            <div class="row text-center align-items-center justify-conten">
                 <div class="col-md">
-                    <div class="card w-75 bg-dark text-light mt-5">
-                        <div class="card-body text-center">
+                    <div style="background-color: whitesmoke; color: black;">
+                        <div class="card-body">
                             <div>
                                 <img src="./images/BFSCHOOL.jpg" class="card-img-top bg-dark" alt="image">
-                                <div class="card-body bg-dark">
+                                <div style="background-color: whitesmoke; color: black;">
                                     <h5 class="card-title"><span class="text-primary">School
                                             Website</span></h5>
                                     <p class="card-text">
@@ -91,8 +91,8 @@
 
 
                 <div class="col-md">
-                    <div class="card w-75 bg-dark text-light mt-5 h-60">
-                        <div class="card-body bg-dark text-center">
+                    <div class="card w-75 bg-dark text-dark mt-5 h-60">
+                        <div style="background-color: whitesmoke; color: black;">
                             <img src="./images/nexcld.jpg" class="card-img-top w-75" alt="image">
                             <div class="card-body">
                                 <h5 class="card-title"><span class="text-primary">Nexcloud
@@ -112,8 +112,8 @@
 
 
                        <div class="col-md">
-                    <div class="card w-75 bg-dark text-light mt-5 h-60">
-                        <div style="background-color: whitesmoke; ">
+                    <div class="card w-75 bg-dark text-dark mt-5 h-60">
+                        <div style="background-color: whitesmoke; color: black;">
                             <img src="./images/portfolio.jpg" class="card-img-top w-75" alt="image">
                             <div class="card-body">
                                 <h5 class="card-title"><span class="text-primary">My
