--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
                 <div class="col-md">
                     <div class="card-body text-center">
                         <div class="card" style="width: 18rem;">
-                            <div class="card-body bg-dark text-light>
+                            <div style="background-color: whitesmoke; color: black;">
                                     <h5 class=" card-title"><span class="text-primary">
                                     Web design and Web development</span></h5>
-                                <p class="card-text text-light">
+                                <p class="card-text text-dark">
                                     I provides services such as website development, which involves building the
                                     full functionality of a site,
                                     and front-end development, which focuses on creating the visual and interactive
@@ -119,9 +119,9 @@
                 <div class="col-md">
                     <div class="card-body text-center">
                         <div class="card" style="width: 18rem;">
-                            <div class="card-body bg-dark text-light">
+                            <div style="background-color: whitesmoke; color: black;">
                                 <h5 class=" card-title"><span class="text-primary">Portfolios</span></h5>
-                                <p class="card-text text-light">
+                                <p class="card-text text-dark">
                                     I create custom portfolio that highlight a client's work and
                                     personal brand, combining clean design, responsive layout, and seamless
                                     functionality
@@ -134,11 +134,11 @@
 
 
                 <div class="col-md">
-                    <div class="card-body text-center">
+                    <div class="card-body">
                         <div class="card" style="width: 18rem;">
-                            <div class="card-body bg-dark text-light>
+                            <div style="background-color: whitesmoke; color: black;">
                                 <h5 class=" card-title"><span class="text-primary">Graphics Design</span></h5>
-                                <p class="card-text text-light">
+                                <p class="card-text">
                                     I'm a passionate graphic designer and visual storyteller crafting clean,
                                     impactful visuals, creatig innovative
                                     design solutions transforming concepts into professional, engaging designs
