--- a/projects.html
+++ b/projects.html
@@ -63,8 +63,8 @@
             </h3>
         </div>
         <div class="container mt-5">
-            <div class="row text-center align-items-center justify-conten">
-                <div class="col-md">
+            <div class="row">
+                <div class="col-md w-75 text-dark mt-5 h-60">
                     <div style="background-color: whitesmoke; color: black;">
                         <div class="card-body">
                             <div>
@@ -91,7 +91,7 @@
 
 
                 <div class="col-md">
-                    <div class="card w-75 bg-dark text-dark mt-5 h-60">
+                    <div class="card w-75 text-dark mt-5 h-60">
                         <div style="background-color: whitesmoke; color: black;">
                             <img src="./images/nexcld.jpg" class="card-img-top w-75" alt="image">
                             <div class="card-body">
