--- a/projects.html
+++ b/projects.html
@@ -68,7 +68,7 @@
                     <div style="background-color: whitesmoke; color: black;">
                         <div class="card-body">
                             <div>
-                                <img src="./images/BFSCHOOL.jpg" class="card-img-top bg-dark" alt="image">
+                                <img src="./images/BFSCHOOL.jpg" class="card-img-top bg-dark " alt="image">
                                 <div style="background-color: whitesmoke; color: black;">
                                     <h5 class="card-title"><span class="text-primary">School
                                             Website</span></h5>
@@ -93,7 +93,7 @@
                 <div class="col-md">
                     <div class="card w-75 text-dark mt-5 h-60">
                         <div style="background-color: whitesmoke; color: black;">
-                            <img src="./images/nexcld.jpg" class="card-img-top w-75" alt="image">
+                            <img src="./images/nexcld.jpg" class="card-img-top w-75 mx-auto d-block" alt="image">
                             <div class="card-body">
                                 <h5 class="card-title"><span class="text-primary">Nexcloud
                                         Website</span></h5>
@@ -114,7 +114,7 @@
                        <div class="col-md">
                     <div class="card w-75 bg-dark text-dark mt-5 h-60">
                         <div style="background-color: whitesmoke; color: black;">
-                            <img src="./images/portfolio.jpg" class="card-img-top w-75" alt="image">
+                            <img src="./images/portfolio.jpg" class="card-img-top w-75 mx-auto d-block" alt="image">
                             <div class="card-body">
                                 <h5 class="card-title"><span class="text-primary">My
                                         Portfolio</span></h5>
