--- a/projects.html
+++ b/projects.html
@@ -68,7 +68,7 @@
                     <div style="background-color: whitesmoke; color: black;">
                         <div class="card-body">
                             <div>
-                                <img src="./images/BFSCHOOL.jpg" class="card-img-top bg-dark " alt="image">
+                                <img src="./images/BFSCHOOL.jpg" class="card-img-top w-75 mx-auto d-block " alt="image">
                                 <div style="background-color: whitesmoke; color: black;">
                                     <h5 class="card-title"><span class="text-primary">School
                                             Website</span></h5>
@@ -78,7 +78,7 @@
                                         announcements,academic resources, and contact information
                                     </p>
 
-                                      <a href="BrightFutureSchool/BrightFutureSchool.html" class="btn btn-primary">
+                                      <a href="BrightFutureSchool/BrightFutureSchool.html" class="btn btn-primary d-block mx-auto">
                                     View Project
                                 </a>
 
@@ -102,7 +102,7 @@
                                     showcase its services, contact channels it's location and portfolio
                                 </p>
 
-                                <a href=" https://atusasiire.github.io/Nex-cloud-Business-Project/" class="btn btn-primary">
+                                <a href=" https://atusasiire.github.io/Nex-cloud-Business-Project/" class="btn btn-primary d-block mx-auto">
                                     View Project
                                 </a>
                             </div>
@@ -114,7 +114,7 @@
                        <div class="col-md">
                     <div class="card w-75 bg-dark text-dark mt-5 h-60">
                         <div style="background-color: whitesmoke; color: black;">
-                            <img src="./images/portfolio.jpg" class="card-img-top w-75 mx-auto d-block" alt="image">
+                            <img src="./images/portfolio.jpg" class="card-img-top w-75 mx-auto d-block mt-3" alt="image">
                             <div class="card-body">
                                 <h5 class="card-title"><span class="text-primary">My
                                         Portfolio</span></h5>
@@ -123,7 +123,7 @@
                                     my skills, projects i have worked on and the languages used
                                 </p>
 
-                                <a href="https://atusasiire.github.io/A.D.CARED-PORTFOLIO/" class="btn btn-primary">
+                                <a href="https://atusasiire.github.io/A.D.CARED-PORTFOLIO/" class="btn btn-primary d-block mx-auto">
                                     View Project
                                 </a>
                             </div>
