--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,7 @@
             </h3>
         </div>
         <div class="container mt-5">
-            <div class="row">
+            <div class="row justify-content-center">
                 <div class="col-md w-75 text-dark mt-5 h-60">
                     <div style="background-color: whitesmoke; color: black;">
                         <div class="card-body">
