--- a/projects.html
+++ b/projects.html
@@ -70,7 +70,7 @@
                             <div>
                                 <img src="./images/BFSCHOOL.jpg" class="card-img-top w-75 mx-auto d-block " alt="image">
                                 <div style="background-color: whitesmoke; color: black;">
-                                    <h5 class="card-title"><span class="text-primary">School
+                                    <h5 class="card-title mt-3 text-center"><span class="text-primary">School
                                             Website</span></h5>
                                     <p class="card-text">
                                         I developed a school wbsite that provides easy access to school
@@ -93,9 +93,9 @@
                 <div class="col-md">
                     <div class="card w-75 text-dark mt-5 h-60">
                         <div style="background-color: whitesmoke; color: black;">
-                            <img src="./images/nexcld.jpg" class="card-img-top w-75 mx-auto d-block" alt="image">
+                            <img src="./images/nexcld.jpg" class="card-img-top w-75 mx-auto d-block mt-3" alt="image">
                             <div class="card-body">
-                                <h5 class="card-title"><span class="text-primary">Nexcloud
+                                <h5 class="card-title text-center"><span class="text-primary">Nexcloud
                                         Website</span></h5>
                                 <p class="card-text">
                                     I designed and developed a professional website for an IT company to
@@ -116,7 +116,7 @@
                         <div style="background-color: whitesmoke; color: black;">
                             <img src="./images/portfolio.jpg" class="card-img-top w-75 mx-auto d-block mt-3" alt="image">
                             <div class="card-body">
-                                <h5 class="card-title"><span class="text-primary">My
+                                <h5 class="card-title text-center"><span class="text-primary">My
                                         Portfolio</span></h5>
                                 <p class="card-text">
                                     I designed and developed a personal portfolio website show casing
