--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-5 ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="/A.D.CARED-PORTFOLIO/index.html">Home</a>
+                        <a class="nav-link active text-white" aria-current="page"
+                            href="/A.D.CARED-PORTFOLIO/index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="/A.D.CARED-PORTFOLIO/about.html">About</a>
@@ -59,19 +60,25 @@
     </nav>
 
     <!-- Hero section -->
-    <section style="background-color: whitesmoke; color: dark;">
-        class="jumbotron jumbotron-fluid text-center bg-secondary text-white p-5 p-lg-0 pt-lg-5 text-sm-start vh-100">
+    <section style="background-color: whitesmoke; color: dark; text-align: center; padding: 5; height: 100hv; @media (min-width: 992px) {
+  .p-lg-0 {
+    padding: 0; @media (min-width: 992px) {
+  .pt-lg-5 {
+    padding-top: 3rem; @media (min-width: 576px) {
+  .text-sm-start {
+    text-align: left">
+        class="jumbotron jumbotron-fluid text-center bg-secondary text-white p-5 vh-100">
         <div class="container mt-5">
             <div class="d-sm-flex align-items-center justify-content-between d-sm-flex pt-5">
                 <div>
                     <h6 class="display-5 fw-bold">Hello, I'm Atusasiire Daren Cared </h6>
 
                     <p class="display-6 fw-bold">
-                        <span class="text-dark">
+                        <span class="text-primary">
                             Junior Web Developer
                         </span>
                     </p>
-                    <p class="lead my-4 mt-5 text-white">
+                    <p class="lead my-4 mt-5 text-dark">
                         I'm a junior web developer skilled in HTML, CSS, and Bootstrap,<br> with a passion for creating
                         clean,
                         responsive, and user-friendly<br> websites. I focus on turning ideas
@@ -80,13 +87,14 @@
                         improving my web development
                         skills.
                     </p>
-                   
+
 
                     <a href="projects.html" class="btn btn-primary">
                         Explore My Projects
                     </a>
                 </div>
-                <img class="img-fluid w-50 img-thumbnail width-100 height-50 d-none d-sm-block" src="./images/daren123.jpg" alt="Image">
+                <img class="img-fluid w-50 img-thumbnail width-100 height-50 d-none d-sm-block"
+                    src="./images/daren123.jpg" alt="Image">
             </div>
         </div>
     </section>
@@ -102,8 +110,8 @@
                     <div class="card-body">
                         <div class="card" style="width: 18rem;">
                             <div style="background-color: whitesmoke; color: black;">
-                                    <h5 class=" card-title"><span class="text-primary">
-                                    Web design and Web development</span></h5>
+                                <h5 class=" card-title"><span class="text-primary">
+                                        Web design and Web development</span></h5>
                                 <p class="card-text text-dark">
                                     I provides services such as website development, which involves building the
                                     full functionality of a site,
@@ -161,14 +169,14 @@
                 <h5><span class="text-primary ">Quick Links</span></h5>
 
                 <div>
-                    <a href="/A.D.CARED-PORTFOLIO/index.html"  class="text-decoration-none">Home</a>
+                    <a href="/A.D.CARED-PORTFOLIO/index.html" class="text-decoration-none">Home</a>
                 </div>
 
                 <div>
                     <a href="/A.D.CARED-PORTFOLIO/about.html" class="text-decoration-none">About</a>
                 </div>
 
-                <div >
+                <div>
                     <a href="/A.D.CARED-PORTFOLIO/projects.html" class="text-decoration-none">Projects</a>
                 </div>
 
