--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </nav>
 
     <!-- Hero section -->
-    <section style="background-color: whitesmoke; color: dark; text-align: center; padding: 5; height: 100hv; @media (min-width: 992px) {
+    <section style="background-color: whitesmoke; color: dark; text-align: center; padding: 5; height: 100hv; width: 100%; @media (min-width: 992px) {
   .p-lg-0 {
     padding: 0; @media (min-width: 992px) {
   .pt-lg-5 {
